--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@
     padding-bottom: 10px;
     border-bottom: 1px solid rgba(4, 4, 4, 0.398); }
   .MainTienda .DivContainer {
-    margin-left: 0%;
+    margin-left: 3%;
     margin-right: 0%;
     margin-top: 3%;
     margin-bottom: 0%;
@@ -197,3 +197,353 @@
   .footer .redes, .footer .redeslink {
     width: 40px;
     height: 40px; }
+
+@media (max-width: 600px) {
+  /*INDEX MAX600*/
+  .header {
+    height: 550px; }
+    .header .banner {
+      height: 550px; }
+    .header .h1banner, .header .h2banner {
+      margin-bottom: 16px;
+      margin-left: 1%;
+      position: relative;
+      color: #95b59b;
+      font-size: 130%;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+      letter-spacing: 2px;
+      width: 23%; }
+    .header .h2banner {
+      color: white;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      font-size: 120%;
+      font-weight: lighter;
+      margin-bottom: 10px;
+      border-bottom: 0px;
+      letter-spacing: 0ch;
+      width: 90%; }
+    .header .buttonbanner {
+      z-index: 2;
+      width: 140px;
+      margin-bottom: 5px;
+      margin-left: 40%;
+      position: relative;
+      font-size: 120%;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      color: black;
+      font-weight: 450;
+      line-height: 1;
+      border: 0;
+      padding: 10px 10px;
+      border-radius: 25px;
+      background-color: #fafafa;
+      cursor: pointer;
+      width: 30%; }
+  .main .slide img {
+    height: 500px; }
+  /*INDEX MAX600*/
+  /*INDEX MAX600*/
+  /*TIENDA MAX600*/
+  .MainTienda .DivContainer {
+    margin-left: 20%;
+    margin-right: 0%;
+    margin-top: 3%;
+    margin-bottom: 0%;
+    justify-content: center;
+    align-items: center; }
+  /*GALERÍA MAX600*/
+  .mainGaleria {
+    height: 280rem; }
+    .mainGaleria .sectionGaleria {
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: 40% 40% 40% 40% 40% 40% 40% 40% 40%;
+      grid-template-areas: "foto1" "foto2" "foto3" "foto4" "foto5" "foto6" "foto7" "foto8" "foto9";
+      column-gap: 10px;
+      row-gap: 10px;
+      justify-items: center;
+      align-items: center;
+      height: 2800px;
+      padding-top: 1600px; }
+      .mainGaleria .sectionGaleria .imgGaleria {
+        width: 80%;
+        height: 80%;
+        box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+        border: 1px solid beige; }
+        .mainGaleria .sectionGaleria .imgGaleria:hover {
+          box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+          transition: all 1s;
+          transform: scale(100%); }
+  /*NOSOTROS MAX600*/
+  .headerNosotros {
+    width: 100%;
+    height: 300px; }
+    .headerNosotros .BannerNosotros {
+      width: 100%;
+      height: 100%;
+      border-bottom: 3px solid rgba(61, 59, 59, 0.59); } }
+
+@media screen and (min-width: 600px) {
+  /*INDEX MIN600*/
+  .header {
+    height: 550px; }
+    .header .banner {
+      height: 550px; }
+    .header .h1banner, .header .h2banner {
+      margin-bottom: 16px;
+      margin-left: 1%;
+      position: relative;
+      color: #95b59b;
+      font-size: 130%;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+      letter-spacing: 2px;
+      width: 23%; }
+    .header .h2banner {
+      color: white;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      font-size: 120%;
+      font-weight: lighter;
+      margin-bottom: 10px;
+      border-bottom: 0px;
+      letter-spacing: 0ch;
+      width: 90%; }
+    .header .buttonbanner {
+      z-index: 2;
+      width: 140px;
+      margin-bottom: 5px;
+      margin-left: 40%;
+      position: relative;
+      font-size: 120%;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      color: black;
+      font-weight: 450;
+      line-height: 1;
+      border: 0;
+      padding: 10px 10px;
+      border-radius: 25px;
+      background-color: #fafafa;
+      cursor: pointer;
+      width: 30%; }
+  .main .slide img {
+    height: 500px; }
+  /*TIENDA MIN600*/
+  .MainTienda .DivContainer {
+    margin-left: 3%;
+    margin-right: 0%;
+    margin-top: 3%;
+    margin-bottom: 0%;
+    justify-content: center;
+    align-items: center; }
+  /*GALERÍA MIN600*/
+  .mainGaleria {
+    height: 280rem; }
+    .mainGaleria .sectionGaleria {
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: 40% 40% 40% 40% 40% 40% 40% 40% 40%;
+      grid-template-areas: "foto1" "foto2" "foto3" "foto4" "foto5" "foto6" "foto7" "foto8" "foto9";
+      column-gap: 10px;
+      row-gap: 10px;
+      justify-items: center;
+      align-items: center;
+      height: 2800px;
+      padding-top: 1600px; }
+      .mainGaleria .sectionGaleria .imgGaleria {
+        width: 80%;
+        height: 80%;
+        box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+        border: 1px solid beige; }
+        .mainGaleria .sectionGaleria .imgGaleria:hover {
+          box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+          transition: all 1s;
+          transform: scale(100%); }
+  /*NOSOTROS MIN600*/
+  .headerNosotros {
+    width: 100%;
+    height: 300px; }
+    .headerNosotros .BannerNosotros {
+      width: 100%;
+      height: 100%;
+      border-bottom: 3px solid rgba(61, 59, 59, 0.59); } }
+
+@media screen and (min-width: 900px) {
+  /*TIENDA MIN900*/
+  .mainGaleria {
+    height: 150rem; }
+    .mainGaleria .sectionGaleria {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 40% 40% 40% 40% 40%;
+      grid-template-areas: "foto1" "foto2" "foto3" "foto4" "foto5" "foto6" "foto7" "foto8" "foto9";
+      column-gap: 10px;
+      row-gap: 10px;
+      justify-items: center;
+      align-items: center;
+      height: 1750px;
+      padding-top: 600px; }
+      .mainGaleria .sectionGaleria .imgGaleria {
+        width: 90%;
+        height: 90%;
+        box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+        border: 1px solid beige; }
+        .mainGaleria .sectionGaleria .imgGaleria:hover {
+          box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+          transition: all 1s;
+          transform: scale(103%); } }
+
+@media screen and (min-width: 1200px) {
+  /*INDEX MIN1200*/
+  .header {
+    height: 700px; }
+    .header .banner {
+      height: 700px; }
+    .header .buttonbanner {
+      z-index: 2;
+      width: 150px;
+      margin-bottom: 23%;
+      margin-left: 1%;
+      position: relative;
+      font-size: 130%;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      color: black;
+      font-weight: 450;
+      line-height: 1;
+      border: 0;
+      padding: 16px 30px;
+      border-radius: 30px;
+      background-color: #fafafa;
+      cursor: pointer; }
+  .main .slide img {
+    height: 750px; } }
+
+@media screen and (min-width: 1400px) {
+  /*INDEX MIN1400*/
+  .header {
+    border-bottom: 5px solid rgba(10, 31, 15, 0.768);
+    width: 100%;
+    height: 940px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: flex-end; }
+    .header .banner {
+      width: 100%;
+      height: 940px;
+      position: absolute;
+      z-index: 1; }
+    .header .h1banner, .header .h2banner {
+      z-index: 2;
+      margin-bottom: 1%;
+      margin-left: 1%;
+      position: relative;
+      color: #95b59b;
+      font-family: 'Roboto', sans-serif;
+      font-size: 300%;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+      letter-spacing: 2px;
+      width: 16%; }
+    .header .h2banner {
+      z-index: 2;
+      margin-bottom: 1%;
+      margin-left: 1%;
+      position: relative;
+      color: white;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      font-size: 140%;
+      font-weight: lighter;
+      border-bottom: 0ch;
+      letter-spacing: 0ch;
+      width: 80%; }
+    .header .buttonbanner {
+      z-index: 2;
+      width: 150px;
+      margin-bottom: 23%;
+      margin-left: 1%;
+      position: relative;
+      font-size: 130%;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+      color: black;
+      font-weight: 450;
+      line-height: 1;
+      border: 0;
+      padding: 16px 30px;
+      border-radius: 30px;
+      background-color: #fafafa;
+      cursor: pointer; }
+  .main {
+    background-image: linear-gradient(180deg, #3c4e36, #95ad82, #2b3827); }
+    .main .SectionHome {
+      padding-top: 100px;
+      padding-bottom: 100px; }
+    .main .slide {
+      box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.542); }
+      .main .slide img {
+        height: 900px; }
+  /*GALERÍA MIN1400*/
+  .mainGaleria {
+    height: 100rem;
+    width: 100%;
+    background-color: #435448; }
+    .mainGaleria .sectionGaleria {
+      display: grid;
+      grid-template-columns: 25% 25% 25%;
+      grid-template-rows: 25% 25% 25%;
+      grid-template-areas: "foto1 foto2 foto3" "foto4 foto5 foto6" "foto7 foto8 foto9";
+      column-gap: 10px;
+      row-gap: 10px;
+      justify-content: space-evenly;
+      align-content: space-evenly;
+      width: 100%;
+      height: 100%;
+      padding-top: 20px; }
+      .mainGaleria .sectionGaleria .imgGaleria {
+        width: 100%;
+        height: 100%;
+        box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+        border: 1px solid beige; }
+        .mainGaleria .sectionGaleria .imgGaleria:hover {
+          box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+          transition: all 1s;
+          transform: scale(120%); }
+  /*NOSOTROS MIN1400*/
+  .headerNosotros {
+    width: 100%;
+    height: 630px; }
+    .headerNosotros .BannerNosotros {
+      width: 100%;
+      height: 100%;
+      border-bottom: 3px solid rgba(61, 59, 59, 0.59); }
+  .mainNosotros {
+    height: 50rem;
+    background-color: #435448; }
+    .mainNosotros .sectionNosotros {
+      padding-bottom: 200px; }
+      .mainNosotros .sectionNosotros .h1Nosotros {
+        text-align: center;
+        font-family: "Quicksand", sans-serif;
+        font-weight: 100;
+        font-size: 400%;
+        padding-top: 2%;
+        letter-spacing: 4px;
+        color: white; }
+      .mainNosotros .sectionNosotros .Pnosotros {
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+        font-weight: 100;
+        font-size: 200%;
+        text-align: left;
+        margin-left: 2%;
+        padding-top: 2%;
+        color: white; }
+  /*CONTACTO MIN1400*/
+  .mainContacto {
+    height: 1400px;
+    background-color: #435448; }
+    .mainContacto .h1Contacto {
+      text-align: center;
+      font-family: "Quicksand", sans-serif;
+      font-weight: 100;
+      font-size: 400%;
+      padding-top: 2%;
+      letter-spacing: 4px;
+      color: white; } }
