--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,7 +151,7 @@
     }
 
     .DivContainer{
-        margin-left: 0%;
+        margin-left: 3%;
         margin-right: 0%;
         margin-top: 3%;
         margin-bottom: 0%;
@@ -304,4 +304,617 @@
         @extend .redes;
        
     }
+}
+
+@media (max-width: 600px){
+
+    /*INDEX MAX600*/
+    .header{
+
+        height: 550px;
+
+        .banner{
+
+            height: 550px;     
+        }
+    
+        .h1banner{
+            margin-bottom: 16px;
+            margin-left: 1%;
+            position: relative;
+            color: rgb(149, 181, 155);
+            font-size: 130%;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+            letter-spacing: 2px;
+            width: 23%;
+            
+            
+            
+        }
+
+        .h2banner{
+
+            
+    
+            color: rgb(255, 255, 255);
+            font-family: $fuenteTexto;
+            font-size: 120%;
+            font-weight: lighter;
+            margin-bottom: 10px;
+            border-bottom: 0px;
+            letter-spacing: 0ch;
+            width: 90%;
+           
+    
+        }
+    
+        .buttonbanner{
+            z-index: 2;
+            width: 140px;
+            margin-bottom:5px;
+            margin-left: 40%;
+            position: relative;
+            font-size: 120%;
+            font-family: $fuenteTexto;
+            color: rgb(0, 0, 0);
+            font-weight:450;
+            line-height: 1;
+            border: 0;
+            padding: 10px 10px;
+            border-radius: 25px;
+            background-color: rgb(250, 250, 250);
+            cursor: pointer;
+            width: 30%;
+            
+            
+            
+            
+        }
+
+    }
+
+    .main{
+
+        .slide{
+    
+            img{
+                height: 500px;
+                
+            }
+            
+        }
+    }
+    
+        
+
+ /*INDEX MAX600*//*INDEX MAX600*/
+
+  /*TIENDA MAX600*/
+    
+    .MainTienda{
+
+        .DivContainer{
+        margin-left: 20%;
+        margin-right: 0%;
+        margin-top: 3%;
+        margin-bottom: 0%;
+        justify-content: center;
+        align-items: center;
+        }
+
+    }
+
+
+
+
+  /*GALERÍA MAX600*/
+
+    .mainGaleria{
+
+     height: 280rem;
+
+   
+
+
+        .sectionGaleria{
+         display: grid;
+         grid-template-columns: 100%;
+         grid-template-rows: 40% 40% 40% 40% 40% 40% 40% 40% 40%;
+         grid-template-areas: "foto1"
+                             "foto2"
+                             "foto3"
+                             "foto4"
+                             "foto5"
+                             "foto6"
+                             "foto7"
+                             "foto8"
+                             "foto9";
+         column-gap: 10px;
+         row-gap: 10px;
+         justify-items: center;
+         align-items: center;
+         height: 2800px;
+         padding-top: 1600px;
+
+            .imgGaleria{
+             width: 80%;
+             height: 80%;
+             box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+             border: 1px solid beige;
+
+                &:hover{
+             box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+             transition: all 1s;
+             transform: scale(100%);
+
+                }
+            }
+
+        }
+    }
+
+ /*NOSOTROS MAX600*/
+
+ .headerNosotros{
+    width: 100%; 
+    height: 300px;
+
+    .BannerNosotros{
+        width: 100%;
+        height: 100%;
+        border-bottom: 3px solid rgba(61, 59, 59, 0.59);
+    }
+}
+
+}
+
+@media screen and (min-width:600px){
+
+    /*INDEX MIN600*/
+    .header{
+
+        height: 550px;
+
+        .banner{
+
+            height: 550px;     
+        }
+    
+        .h1banner{
+            margin-bottom: 16px;
+            margin-left: 1%;
+            position: relative;
+            color: rgb(149, 181, 155);
+            font-size: 130%;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+            letter-spacing: 2px;
+            width: 23%;
+            
+            
+            
+        }
+
+        .h2banner{
+
+            
+    
+            color: rgb(255, 255, 255);
+            font-family: $fuenteTexto;
+            font-size: 120%;
+            font-weight: lighter;
+            margin-bottom: 10px;
+            border-bottom: 0px;
+            letter-spacing: 0ch;
+            width: 90%;
+           
+    
+        }
+    
+        .buttonbanner{
+            z-index: 2;
+            width: 140px;
+            margin-bottom:5px;
+            margin-left: 40%;
+            position: relative;
+            font-size: 120%;
+            font-family: $fuenteTexto;
+            color: rgb(0, 0, 0);
+            font-weight:450;
+            line-height: 1;
+            border: 0;
+            padding: 10px 10px;
+            border-radius: 25px;
+            background-color: rgb(250, 250, 250);
+            cursor: pointer;
+            width: 30%;
+            
+            
+            
+            
+        }
+
+    }
+
+    .main{
+
+        .slide{
+    
+            img{
+                height: 500px;
+                
+            }
+            
+        }
+    }
+    
+        
+
+  /*TIENDA MIN600*/
+    
+    .MainTienda{
+
+        .DivContainer{
+        margin-left: 3%;
+        margin-right: 0%;
+        margin-top: 3%;
+        margin-bottom: 0%;
+        justify-content: center;
+        align-items: center;
+        }
+
+    }
+
+
+
+
+  /*GALERÍA MIN600*/
+
+    .mainGaleria{
+
+     height: 280rem;
+
+   
+
+
+        .sectionGaleria{
+         display: grid;
+         grid-template-columns: 100%;
+         grid-template-rows: 40% 40% 40% 40% 40% 40% 40% 40% 40%;
+         grid-template-areas: "foto1"
+                             "foto2"
+                             "foto3"
+                             "foto4"
+                             "foto5"
+                             "foto6"
+                             "foto7"
+                             "foto8"
+                             "foto9";
+         column-gap: 10px;
+         row-gap: 10px;
+         justify-items: center;
+         align-items: center;
+         height: 2800px;
+         padding-top: 1600px;
+
+            .imgGaleria{
+             width: 80%;
+             height: 80%;
+             box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+             border: 1px solid beige;
+
+                &:hover{
+             box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+             transition: all 1s;
+             transform: scale(100%);
+
+                }
+            }
+
+        }
+    }
+
+ /*NOSOTROS MIN600*/
+
+ .headerNosotros{
+    width: 100%; 
+    height: 300px;
+
+    .BannerNosotros{
+        width: 100%;
+        height: 100%;
+        border-bottom: 3px solid rgba(61, 59, 59, 0.59);
+    }
+}
+
+}
+
+@media screen and (min-width:900px){
+
+     /*TIENDA MIN900*/
+
+    .mainGaleria{
+
+        height: 150rem;
+   
+      
+   
+   
+           .sectionGaleria{
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 40% 40% 40% 40% 40%;
+            grid-template-areas: "foto1""foto2"
+                                 "foto3""foto4"
+                                 "foto5""foto6"
+                                 "foto7""foto8"
+                                 "foto9";
+            column-gap: 10px;
+            row-gap: 10px;
+            justify-items: center;
+            align-items: center;
+            height: 1750px;
+            padding-top: 600px;
+   
+               .imgGaleria{
+                width: 90%;
+                height: 90%;
+                box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+                border: 1px solid beige;
+   
+                   &:hover{
+                box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+                transition: all 1s;
+                transform: scale(103%);
+   
+                   }
+               }
+   
+           }
+       }
+
+
+
+}
+
+@media screen and (min-width:1200px){
+
+      /*INDEX MIN1200*/
+
+    .header{
+
+        height: 700px;
+
+        .banner{
+
+            height: 700px;     
+        }
+
+        .buttonbanner{
+            z-index: 2;
+            width: 150px;
+            margin-bottom: 23%;
+            margin-left: 1%;
+            position: relative;
+            font-size: 130%;
+            font-family: $fuenteTexto;
+            color: rgb(0, 0, 0);
+            font-weight:450;
+            line-height: 1;
+            border: 0;
+            padding: 16px 30px;
+            border-radius: 30px;
+            background-color: rgb(250, 250, 250);
+            cursor: pointer;
+            
+        }
+    }
+
+    .main{
+
+        .slide{
+    
+            img{
+                height: 750px;
+                
+            }
+            
+        }
+    }
+
+
+
+}
+
+@media screen and (min-width:1400px){
+
+     /*INDEX MIN1400*/
+     
+    .header{
+        border-bottom: 5px solid rgba(10, 31, 15, 0.768);
+        width: 100%;
+        height: 940px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: flex-end;
+    
+        .banner{
+        
+        
+            width: 100%;
+            height: 940px;
+            position: absolute;
+            z-index: 1;
+            
+        }
+    
+        .h1banner{
+            z-index: 2;
+            margin-bottom: 1%;
+            margin-left: 1%;
+            position: relative;
+            color: rgb(149, 181, 155);
+            font-family:'Roboto', sans-serif;
+            font-size: 300%;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.878);
+            letter-spacing: 2px;
+            width: 16%;
+            
+            
+            
+        }
+
+        .h2banner{
+            z-index: 2;
+            margin-bottom: 1%;
+            margin-left: 1%;
+            position: relative;
+            color: rgb(255, 255, 255);
+            font-family: $fuenteTexto;
+            font-size: 140%;
+            font-weight: lighter;
+            border-bottom: 0ch;
+            letter-spacing: 0ch;
+            width: 80%;
+            
+            
+        
+            
+        
+        }
+    
+        .buttonbanner{
+            z-index: 2;
+            width: 150px;
+            margin-bottom: 23%;
+            margin-left: 1%;
+            position: relative;
+            font-size: 130%;
+            font-family: $fuenteTexto;
+            color: rgb(0, 0, 0);
+            font-weight:450;
+            line-height: 1;
+            border: 0;
+            padding: 16px 30px;
+            border-radius: 30px;
+            background-color: rgb(250, 250, 250);
+            cursor: pointer;
+            
+        }
+    }
+
+    .main{
+        background-image: linear-gradient(180deg, rgb(60,78,54),rgb(149,173,130),rgb(43,56,39));
+     
+        .SectionHome{
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
+    
+        .slide{
+        
+            box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.542);
+            
+            img{
+                height: 900px;
+            }
+            
+        }
+    
+        }
+
+         /*GALERÍA MIN1400*/
+
+        .mainGaleria{
+            height: 100rem;
+            width: 100%;
+            background-color: $colorFondo;
+        
+            .sectionGaleria{
+                display: grid;
+                grid-template-columns: 25% 25% 25%;
+                grid-template-rows: 25% 25% 25%;
+                grid-template-areas: "foto1 foto2 foto3"
+                                     "foto4 foto5 foto6"
+                                     "foto7 foto8 foto9";
+                column-gap: 10px;
+                row-gap: 10px;
+                justify-content: space-evenly;
+                align-content: space-evenly;
+        
+                width: 100%;
+                height: 100%;
+                padding-top: 20px;
+                
+             
+                .imgGaleria{
+                    width: 100%;
+                    height: 100%;
+                    box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+                    border: 1px solid beige;
+        
+                    &:hover{
+                    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+                    transition: all 1s;
+                    transform: scale(120%);
+        
+                    }
+                }
+        
+            }
+            
+        }
+
+          /*NOSOTROS MIN1400*/
+          .headerNosotros{
+            width: 100%; 
+            height: 630px;
+        
+            .BannerNosotros{
+                width: 100%;
+                height: 100%;
+                border-bottom: 3px solid rgba(61, 59, 59, 0.59);
+            }
+        }
+        
+        
+        .mainNosotros{
+            height: 50rem;
+            background-color: $colorFondo;
+        
+            .sectionNosotros{
+                                
+                padding-bottom: 200px;
+        
+                .h1Nosotros{
+               @include Titulos($fuenteTitulo , $TamTitulo)
+                }
+        
+                .Pnosotros{
+                    font-family: $fuenteTexto;
+                    font-weight: 100;
+                    font-size: 200%;
+                    text-align: left;
+                    margin-left: 2%;
+                    padding-top: 2%;
+                    color: white;
+                   
+                } 
+        
+            }
+        }
+
+        /*CONTACTO MIN1400*/
+
+        .mainContacto{
+            height: 1400px;
+            background-color: $colorFondo;
+        
+            .h1Contacto{
+               @include Titulos($fuenteTitulo , $TamTitulo)
+            }
+        
+        
+        }
 }
